# LOG2610

./: script
inf2610-lab0-2.2/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
inf2610-lab0-2.2/minisys-k/kernel/: k_0  k_1  k_2  k_3  metadata
inf2610-lab0-2.2/src/: Makefile  Makefile.am  Makefile.in  hello  hello.c  minisys  minisys.asm
inf2610-lab0-2.2/src/.deps/: hello.Po
inf2610-lab0-2.2/src/more/: io.c  write_printf.c
lab1/: INF2610-lab1-H18.odt
lab1/inf2610-lab1-2.3/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
lab1/inf2610-lab1-2.3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
lab1/inf2610-lab1-2.3/banque/: Makefile  Makefile.in  banque  banque-all.sh  banque-perf.sh  banque.c  out  outPthread  perf.csv
lab1/inf2610-lab1-2.3/chaine/: Makefile  Makefile.in  bar  bar.c  baz  baz.c  chaine  chaine.c  foo  foo.c
lab1/inf2610-lab1-2.3/descripteurs/: Makefile  Makefile.am  Makefile.in  descripteurs  descripteurs.c
lab2/: INF2610-lab2-H18.odt
lab2/inf2610-lab2-2.0/: Makefile  config.h  config.status  configure  configure.ac  libtool
lab2/inf2610-lab2-2.0/interblocage/: Makefile  (+1 more)
lab3/: INF2610-lab3-H18.odt
lab3/inf2610-lab3-3.0/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool
lab3/inf2610-lab3-3.0/maps/: Makefile  Makefile.am  Makefile.in  pagesaver.c  pagesaver.h  segfault.c  thread.c
lab4/: .~lock.INF2610-lab4-H18.odt#  INF2610-lab4-H18.odt
(+134 files in other folders)
